# gedai

./: .buildinfo  .gitignore  README.md  api_ref.html  environment.yaml  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js
.github/workflows/: build-docs.yml  install_and_test.yml
_modules/: index.html
_modules/gedai/: core.html  emissions.html  fetch.html  fuel.html  preprocess.html
_modules/gedai/utils/: legs.html
_sources/: api_ref.rst.txt  index.rst.txt  installation.rst.txt
_sources/api_ref/: gedai.fuel.rst.txt  gedai.utils.rst.txt
api_ref/: gedai.core.html  gedai.emissions.html  gedai.fetch.html  gedai.fuel.html  gedai.preprocess.html  gedai.utils.html
docs/source/: conf.py  quickstart.rst
docs/source/api_ref/: gedai.core.rst  gedai.emissions.rst  gedai.fetch.rst  gedai.preprocess.rst
examples/: example_single_trajectory.ipynb
gedai/: __init__.py  core.py  emissions.py  fetch.py  fuel.py  preprocess.py
gedai/utils/: legs.py
tests/: test_emissions.py  test_fetch.py  test_fuel.py  test_preprocess.py
